--- a/src/main/resources/assets/sanguinaire/lang/en_us.json
+++ b/src/main/resources/assets/sanguinaire/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.sanguinaire.ancient_blood": "Elder Vampire Blood",
   "item.sanguinaire.vampire_heart": "Vampire Heart",
   "item.sanguinaire.crimson_mirror": "Crimson Mirror",
+  "item.sanguinaire.gold_goblet": "Golden Goblet",
   "item.sanguinaire.music_disc_vamp": "Music Disc",
 
   "itemGroup.sanguinarieTab": "Sanguinaire",
